# llm-service

./: .envrc  .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
src/llm_service/: __init__.py  __main__.py  cli.py  config.py  main.py
src/llm_service/api/: __init__.py  admin.py  openai.py
src/llm_service/backends/: __init__.py  base.py  mlx_backend.py  vllm_backend.py
src/llm_service/services/: __init__.py  backend_manager.py  config_manager.py  metrics.py  model_manager.py
src/llm_service/templates/admin/: dashboard.html
